# EmpireLogsC

./: .gitignore  CMakeLists.txt  README.md
include/EmpireLogs/: BuildTracker.h  CleanupSystem.h  DismantleTracker.h  GuildMemberUpdateTracker.h  JoinTracker.h  MainLoader.h  SharedState.h  Types.h
include/Logger/: Logger.h
src/: dllmain.cpp
src/EmpireLogs/: BuildTracker.cpp  CleanupSystem.cpp  DismantleTracker.cpp  GuildMemberUpdateTracker.cpp  JoinTracker.cpp  MainLoader.cpp  SharedState.cpp
